syntax = "proto3";
package scraphook.admin.dashboard.v1;
option go_package = "github.com/scrapnode/scraphook/admin/protos";

service Account {
  rpc Sign(AccountSignReq) returns (AccountSignRes) {}
  rpc Verify(AccountVerifyReq) returns (AccountVerifyRes) {}
  rpc Refresh(AccountRefreshReq) returns (AccountRefreshRes) {}
}

message AccountSignReq {
  string username = 1;
  string password = 2;
}

message AccountSignRes {
  string access_token = 1;
  string refresh_token = 2;
}

message AccountVerifyReq {
  string access_token = 1;
}

message AccountVerifyRes {
  repeated string workspaces = 1;
  string id  = 3;
  string name = 4;
  string email = 5;
}

message AccountRefreshReq {
  string access_token = 1;
  string refresh_token = 2;
}

message AccountRefreshRes {
  string access_token = 1;
  string refresh_token = 2;
}